--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>Julie's Personal Site</title>
+    <style>
+      body{
+        background-color: #f3d3d3;
+      }
+
+      hr{
+        background-color: #ff3f98;
+        border-style: none;
+        height: 2px;
+      }
+
+    </style>
   </head>
   <body>
-    <img src="https://media.licdn.com/dms/image/C4E03AQHGBvMJaOSrog/profile-displayphoto-shrink_200_200/0?e=1571875200&v=beta&t=ZpKj4J6atb9xRfRHLzjWiJYXRE_AF0O9pdlCiX9vSIg" alt="Julie profile picture">
-    <h1>Julie Rittershofer</h1>
-    <p><em>Aspiring <strong>Full Stack Developer</strong>.</em></p>
-    <p>I am an Agile Product Owner with experience with Java, C++, JavaScript, HTML, and CSS.</p>
-    <hr>
+    <table cellspacing="20">
+      <tr>
+        <img src="https://media.licdn.com/dms/image/C4E03AQHGBvMJaOSrog/profile-displayphoto-shrink_200_200/0?e=1571875200&v=beta&t=ZpKj4J6atb9xRfRHLzjWiJYXRE_AF0O9pdlCiX9vSIg" alt="Julie profile picture">
+        <h1>Julie Rittershofer</h1>
+        <p><em>Aspiring <strong>Full Stack Developer</strong>.</em></p>
+        <p>I am an Agile Product Owner with experience using Java, C++, JavaScript, HTML, and CSS.</p>
+      </tr>
+  </table>
+  <hr>
     <h3>Books and Teachings</h3>
     <ul>
       <li>The complate iOS App Development Bootcamp</li>
@@ -17,7 +33,7 @@
     </ul>
 
     <hr>
-    
+
     <h3>Work Experience</h3>
     <table cellspacing="10">
       <thead>
